Name:                accelerate-backend-kit
Version:             0.1
Synopsis:            Simplified AST for Accelerate that makes it easy to build new backeends.

-- Description:         

Homepage:            https://github.com/rrnewton/accelerate
License:             BSD3
License-file:        LICENSE
Author:              Ryan R. Newton
Maintainer:          rrnewton@gmail.com

Category:            Language

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  Exposed-modules:   Data.Array.Accelerate.SimpleAST, 
                     Data.Array.Accelerate.SimpleConverter
  
  -- Modules not exported by this package.
  -- Other-modules:       
  -- Other-files:       

  Build-depends:
                        array           >= 0.3 && < 0.5,
                        -- base            == 4.*,
                        -- containers      >= 0.3 && < 0.5,
                        -- directory       >= 1.0 && < 1.2,
                        -- ghc-prim        == 0.2.*,
                        mtl             == 2.0.*,
                        -- pretty          >= 1.0 && < 1.2,
                        base >= 4,
                        accelerate      >= 0.10,
                        GenericPretty   >= 1.0,
                        symbol          >= 0.1,
                        vector          >= 0.9,
                        ghc             >= 7.2


Test-Suite test-accelerate-backend-kit
    type:       exitcode-stdio-1.0
    main-is:    Test.hs
--    ghc-options: -rtsopts -threaded
    build-depends: base >= 4 
--                 , array >= 0.3
--                 , deepseq >= 1.2
--                 , binary
--                 , QuickCheck, HUnit, time
                 , test-framework, test-framework-hunit, HUnit
